--- a/frontend/css/dashboard_style.css
+++ b/frontend/css/dashboard_style.css
@@ -4,11 +4,6 @@ body {
     background-color: #f5f5f5;
   }
   
-  .container {
-    display: flex;
-    height: 100vh;
-  }
-  
   .logo {
     font-size: 24px;
     color: #f7c100;
@@ -58,6 +53,7 @@ body {
   
   .charts {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
     margin-bottom: 30px;
   }
