--- a/frontend/css/userinfobar_style.css
+++ b/frontend/css/userinfobar_style.css
@@ -88,6 +88,13 @@
   font-size: 14px;
 }
 
+.dropdown-menu p {
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #333;
+  font-size: 14px;
+}
+
 .dropdown-menu a:hover {
   background-color: #f0f0f0;
 }
